templates/k3s-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3s-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k3s-ui
  template:
    metadata:
      labels:
        app: k3s-ui
      name: k3s-ui
    spec:
      containers:
        - name: k3s-ui
          image: johnwalker333/k3s-ui:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
