templates/k3s-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k3s-ui
spec:
  type: ClusterIP
  selector:
    app: k3s-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
